@@ -56,7 +56,8 @@ GType mime_edit_dialog_get_type         (void);
 
 GObject *mime_edit_dialog_new           (GtkTreeModel *model,
 					 MimeTypeInfo *info);
-GObject *mime_add_dialog_new            (GtkTreeModel *model, GtkWindow *parent);
+GObject *mime_add_dialog_new            (GtkTreeModel *model, GtkWindow *parent,
+					 char const *file_name);
 
 void mime_edit_dialog_get_app (GladeXML *glade, char const *mime_type,
 			       GnomeVFSMimeApplication **current);
