@@ -1,5 +1,13 @@
 2002-06-25  Jody Goldberg <jody@gnome.org>
 
+	* mime-edit-dialog.c (mime_add_dialog_new) : add de
+
+	* file-types-capplet.c (main) : fix cmd line arg support
+	  And support optional 'file_name' as a helper for generating smarter
+	  defaults.
+
+2002-06-25  Jody Goldberg <jody@gnome.org>
+
 	* mime-edit-dialog.c (mime_edit_dialog_get_app) : typo.
 
 2002-06-15  Jody Goldberg <jody@gnome.org>
